# dorylus

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  b+r  bld  calculate-price.py  features.bsnap  getlogs  new-setup-run.sh  requirements.txt  send_file  sum_lambda_time.py
benchmarks/: gen-figure-5  run-amazon-gat  run-amazon-gcn  run-friendster-gcn  run-reddit-gat  run-reddit-gcn  run-reddit-large-gcn
config/: fakeip  hostfile  hostfile_format  kconf.conf  zkhostfile  zkhostfile_format
ec2_manager/: __init__.py  __main__.py  arn  classes.py  command.py  command_handler.py  instance_info.py
ec2man/: __init__.py  __main__.py  classes.py  command.py  ec2_launcher.py  instance_manager.py  machines  profile
funcs/: funcs.install  manage-funcs.install  utils.hpp
funcs/GPU-Computation/: CMakeLists.txt  GPU-Computation.cu  run
funcs/GPU-Computation/components/: CMakeLists.txt  comp_server.cu  comp_server.cuh  comp_unit.cu  comp_unit.cuh  cu_matrix.cu  cu_matrix.cuh  cuda_ops.cuh
funcs/backward-gcn/: CMakeLists.txt
funcs/backward-lambda/: CMakeLists.txt  backward.cpp  upload-func
funcs/backward-prop-josehu/: CMakeLists.txt  backward_prop_josehu.cpp  upload-func
funcs/eval-backward-gcn/: CMakeLists.txt
funcs/eval-forward-gcn/: CMakeLists.txt
funcs/forward-gcn/: CMakeLists.txt
funcs/forward-lambda/: CMakeLists.txt  forward.cpp
funcs/forward-prop-GPU/: ._comp_server.hpp  ._comp_unit.hpp  ._forward-prop-GPU.cpp  CMakeLists.txt  CuMatrix.hpp  bld  comp_server.hpp  comp_unit.hpp  forward-prop-GPU.cpp  forward_GPU.cpp  forward_GPU.cu  run  unit_test.cpp  unit_test.cu
funcs/forward-prop-GPU/comp_server/: CMakeLists.txt  comp_server.cpp  comp_server.cu  comp_server.hpp
funcs/forward-prop-GPU/comp_unit/: CMakeLists.txt  CuMatrix.hpp  comp_unit.cu  comp_unit.hpp
funcs/forward-prop-josehu/: CMakeLists.txt  forward_prop_josehu.cpp  upload-func
funcs/new-backprop/: CMakeLists.txt  backprop.cpp  upload-func
funcs/new-backward-prop/: CMakeLists.txt  new_backward_prop.cpp  upload-func
funcs/new-forward-prop/: CMakeLists.txt  new_forward_prop.cpp  upload-func
gnnman/: all-ctxts  build-system  install-dep  mount-nfs-server  nfs-instance.sh  preproc-instance.sh  send-dataset  send-source  send-source-gpu  setup-cluster  setup-cluster-gpu  terminate-servers  wait-for-ssh.sh
inputs/: Makefile  checkrepartitioner.py  compile.sh  convert2csc.cpp  degreeDeleteSelector.cpp  deleteSelector.cpp  features  featuresToBinary.cpp  featurestobinary  gen-feats.cc  gen-labels.cc  generateFeatues.cpp  generateLabels.cpp  graphToBinary.cpp  graphtobinary  labelsToBinary.cpp  makefeats  manage-inputs.install  partitioner  partitioner.cpp  partitioner.sh  prepare  repartitioner  repartitioner.cpp  repartitioner.py  sample.features  sample.graph  small.graph  snapFeatures.cpp  snapToBinarySnap.cpp  tobinary  tobinaryfeature
miscs/: calculate-price.py  compare_output.py
run/: amazon.config  clear-out  coord-run  cora.config  cserverinfo  dshmachines  dshrun.sh  ec2run.sh  friendster.config  gserverport  kill-all  kill-all-template  kill-all.sh  kill-zombies  layerconfig  nodeIp  reddit-large.config  reddit.config  run-dorylus  run-each  run-gpu-graph-server  run-graph-test  run-onnode  weight-run  workerssync.py  wserverinfo  wserverport  zoo.basic
scripts/: communitychecker.py  componentchecker.py  deleteme.sh
src/: main.cpp
src/coord-server/: CMakeLists.txt  coordserver.cpp  coordserver.hpp
src/coordination-server/: .coordserver.cpp.swp  CMakeLists.txt  bld  coord.cpp  coordserver.cpp  run  weightservers
src/funcs/backward-gcn/: CMakeLists.txt  backward.cpp  upload-func
src/funcs/dnnl-forward-gcn/: CMakeLists.txt  forward.cpp  upload-func
src/funcs/forward-prop-josehu/: CMakeLists.txt  bld  forward_prop_josehu.cpp  invoke  update
src/funcs/gcn/: CMakeLists.txt  backward_ops.cpp  backward_ops.hpp  forward_ops.cpp  forward_ops.hpp  main-new-identity.cpp  main.cpp  network_ops.cpp  network_ops.hpp  upload-func  utils.hpp
src/funcs/gcn/ops/: backward_ops.cpp  backward_ops.hpp  forward_ops.cpp  forward_ops.hpp  network_ops.cpp  network_ops.hpp
src/funcs/timeline-forward/: ._upload-func  CMakeLists.txt  forward.cpp  upload-func
src/graph-server/: CMakeLists.txt  main.cpp
src/graph-server/GPU-Computation/: CMakeLists.txt  comp_server.cu  comp_server.cuh  comp_unit.cu  comp_unit.cuh  compile.sh  cu_matrix.cu  cu_matrix.cuh  cuda_ops.cuh  message_service.cpp  message_service.hpp  test.cpp
src/graph-server/commmanager/: CMakeLists.txt  CPU_comm.cpp  CPU_comm.hpp  GPU_comm.cpp  GPU_comm.hpp  GPU_comm_unit_test.cpp  bld_ut  commmanager.cpp  commmanager.hpp  lambda_comm.cpp  lambda_comm.hpp  lambdaworker.cpp  lambdaworker.hpp  message_service.cpp  message_service.hpp  resource_comm.cpp  resource_comm.hpp  weight_comm.cpp  weight_comm.hpp
src/graph-server/engine/: CMakeLists.txt  edge.cpp  edge.hpp  engine.cpp  engine.hpp  graph.cpp  graph.hpp  utils.cpp  vertex.cpp  vertex.hpp
src/graph-server/engine/ops/: aggregate.cpp  applyedge.cpp  applyvertex.cpp  fusedops.cpp  gat_ops.cpp  gcn_ops.cpp  pipeline.cpp  scatter.cpp  tensors.cpp
src/graph-server/graph/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  edge.hpp  graph.hpp  vertex.cpp
src/graph-server/nodemanager/: CMakeLists.txt  nodemanager.cpp  nodemanager.hpp
src/graph-server/parallel/: CMakeLists.txt  cond.hpp  lock.hpp  rwlock.hpp  threadpool.cpp  threadpool.hpp
src/graph-server/tensorflow/: CMakeLists.txt  export_gnnengine.cpp  export_operators.cpp  export_operators.py  export_operators_grad.cpp
src/graph-server/utils/: CMakeLists.txt  utils.cpp  utils.hpp
src/weight-server/: AdamOptimizer.cpp  AdamOptimizer.hpp  CMakeLists.txt  bld  layerconfig  main.cpp  run  serverworker.cpp  serverworker.hpp  versionmatrix.cpp  versionmatrix.hpp  weightserver.cpp  weightserver.hpp  weighttensor.cpp  weighttensor.hpp
timeline/: ._javascripts  ._stylesheets  ._timeline.html  server.py  timeline.html
utils/: b+r  bld  check-forward.py  clear_out  ec2  ec2run  reset_config  run  send_file  updateIp
(+218 files in other folders)
